--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Myntra+react</title>
+    <title>Online Shopping App</title>
+    <link rel="icon" href="Shopping-app/myntra-app\public/images/myntra_logo.webp" type="image/webp">
   </head>
   <body>
     <div id="root"></div>
